name:           codecov-haskell
version:        0.2.0
synopsis:       Codecov.io support for Haskell.
description:
  This utility converts and sends Haskell projects hpc code coverage to
  <http://codecov.io/ codecov.io>.
  .
  /Usage/
  .
  Below is the simplest example of .travis.yml configuration to use with Travis CI:
  .
  > language: haskell
  > ghc: 7.8
  > script:
  >   - cabal configure --enable-tests --enable-library-coverage && cabal build && cabal test
  > after_script:
  >   - cabal install codecov-haskell
  >   - codecov-haskell [options] [test-suite-names]
  .
  Further information can be found in the <https://github.com/guillaume-nargeot/codecov-haskell README>.

license:        BSD3
license-file:   LICENSE
author:         Guillaume Nargeot
maintainer:     Guillaume Nargeot <guillaume+hackage@nargeot.com>
copyright:      (c) 2014 Guillaume Nargeot
category:       Control
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
tested-with:    GHC == 7.6, GHC == 7.8
homepage:       https://github.com/guillaume-nargeot/codecov-haskell
bug-reports:    https://github.com/guillaume-nargeot/codecov-haskell/issues

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/guillaume-nargeot/codecov-haskell.git

library
  hs-source-dirs: src
  exposed-modules:
    Trace.Hpc.Codecov,
    Trace.Hpc.Codecov.Lix,
    Trace.Hpc.Codecov.Types,
    Trace.Hpc.Codecov.Util
  other-modules:
    CodecovHaskellCmdLine,
    Trace.Hpc.Codecov.Config,
    Trace.Hpc.Codecov.Curl,
    Trace.Hpc.Codecov.Paths
  build-depends:
    aeson,
    base >=4 && < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    hpc >= 0.6,
    safe >= 0.3,
    split

executable codecov-haskell
  hs-source-dirs: src
  main-is:        CodecovHaskellMain.hs
  build-depends:
    aeson,
    base >= 4 && < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    hpc >= 0.6,
    safe >= 0.3,
    split
  ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

executable run-cabal-test
  hs-source-dirs: src
  main-is:        RunCabalTestMain.hs
  build-depends:
    async >= 2.0,
    base >=4 && < 5,
    process,
    regex-posix,
    split
  ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

test-suite test-all
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        TestAll.hs
  build-depends:
    base,
    codecov-haskell,
    HUnit
  ghc-options:    -Wall
